# okra

./: .gitignore  .gitmodules  LICENSE  README.md  dune  dune-project  fmt.sh  okra-bin.opam  okra.opam  okra.opam.template
src/: activity.ml  activity.mli  aggregate.ml  aggregate.mli  calendar.ml  calendar.mli  dune  item.ml  item.mli  lint.ml  lint.mli  okra.ml  okra.mli  reports.ml  reports.mli
test/: dune  test.ml  test_aggregate.ml  test_calendar.ml  test_lint.ml
test/aggregate/: valid-time1.acc
test/expect/: dune  test_engineer.expected  test_engineer.ml
test/lint/: eng1.acc  eng1.rej  format1.rej  format2.rej  format3.rej  invalid-time1.rej  invalid-time2.rej  invalid-time3.rej  multitime1.rej  no-kr1.rej  no-time1.rej  no-title1.rej  no-work1.rej  team1.acc  team1.rej  team2.acc  team3.acc  valid-time1.acc
test/pp/: dune  eng1.md  test.ml
