opam-version: "2.0"
name: "okrmgr"
version: "0.1"
synopsis: "Tool to summarise reports"
description: """
Prototype tool to summarise reports in markdown format.
"""
maintainer: "Magnus Skjegstad <magnus@skjegstad.com>"
authors: "Magnus Skjegstad <magnus@skjegstad.com>"
license: "ISC"
homepage: "https://github.com/magnuss/okra"
bug-reports: "https://github.com/magnuss/okra/issues"
dev-repo: "https://github.com/magnuss/okra"
depends: ["omd" >= "2.0" ]

